@@ -5,10 +5,6 @@
     overflow: auto;
     box-sizing: border-box;
     
-    &.part-editor {
-        margin-top: 10em;
-    }
-    
     iframe {
         border-width: 0;
     }
